--- a/SMLEqTypesValRestr/lib/dune
+++ b/SMLEqTypesValRestr/lib/dune
@@ -1,7 +1,7 @@
 (library
  (name SMLEqTypesValRestr_lib)
  (public_name SMLEqTypesValRestr.Lib)
- (modules Ast Parser Typing Inferencer Interpreter Prettyprinter)
+ (modules Ast Parser Typing Inferencer Result Interpreter)
  (libraries base angstrom)
  (preprocess
   (pps ppx_expect ppx_deriving.show))
